libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/if-1.jsonc
//@ run: fail
//@ description: if/1 should error out
["::kernel::special_form::if", { "#literal": true }]
//~^ ERROR Add missing arguments
